--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>My project</title>
 </head>
 <body>
-  <header>header</header></header>
-  <main></main>
+  <header>header</header>
+  
+  <main>something new</main>
   <footer></footer>
 </body>
 </html>
