--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
   <header>header</header>
-  
-  <main>something new</main>
+  <main>main</main>
   <footer></footer>
 </body>
 </html>
