--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>My project</title>
 </head>
 <body>
-  <header>header 123</header>
+  <header>header</header>
   <main>main</main>
   <footer>footer</footer>
 </body>
